# dataclass-mod

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml
src/dataclasses_mod/: __init__.py  abc.py  sub_fields_validator.py  validators.py
tests/: common.py  test_abc.py  test_sub_fields_validator.py  test_validators.py
tests/test_sub_fields_validator/: test_check_another_fields_fail_schema0_.txt  test_check_another_fields_fail_schema1_.txt  test_check_another_fields_fail_schema2_.txt  test_check_another_fields_fail_schema3_.txt  test_check_another_fields_fail_schema5_.txt  test_check_same_fields_fail_b_.txt  test_check_same_fields_fail_s_b_.txt  test_check_same_fields_fail_s_c_.txt  test_check_same_fields_fail_schema3_.txt  test_check_same_fields_fail_schema4_.txt
tests/test_validators/: test_constrains_fail_args0_.yml  test_constrains_fail_args1_.yml  test_constrains_fail_args2_.yml  test_constrains_fail_args3_.yml  test_constrains_fail_args4_.yml  test_constrains_fail_args5_.yml  test_generic_types_fail_args0_.yml  test_generic_types_fail_args10_.yml  test_generic_types_fail_args1_.yml  test_generic_types_fail_args2_.yml  test_generic_types_fail_args3_.yml  test_generic_types_fail_args4_.yml  test_generic_types_fail_args5_.yml  test_generic_types_fail_args6_.yml  test_generic_types_fail_args7_.yml  test_generic_types_fail_args8_.yml  test_generic_types_fail_args9_.yml  test_simple_types_fail_args0_.yml  test_simple_types_fail_args1_.yml  test_simple_types_fail_args2_.yml  (+4 more)
(+35 files in other folders)
