[tool.poetry]
name = "dataclasses-mod"
version = "0.3.3"
description = ""
authors = ["Nikolai Ryzhkov <namezys@anagram.care>"]
readme = "README.md"
packages = [{include = "dataclasses_mod", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-regressions = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
